--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 /*
-Theme Name: Doo
+Theme Name: my-doo
 Theme URI: http://themevs.com/themes/doo/
+Github Theme URI: https://github.com/jxltom/my-doo
 Description: A beautiful two-columns WordPress theme created by the ThemeVS designers.
-Version: 1.0.36
+Version: 3.0.0
 Author: ThemeVS
 Author URI: http://themevs.com/
 License: GNU General Public License v2 or later
